# FPRDesktop

./: .clang-format  .clang-tidy  .cmake-format.json  CMakeLists.txt  format.sh  profile.sh
src/: CPU.hpp  GPU.hpp  Nvidia.hpp  System.hpp  main.cpp
src/dbg/: Log.hpp  Logger.hpp
src/fprd/: Cairo.hpp  Color.hpp  Config.cmake.hpp  Font.hpp  Image.hpp  NVML.hpp  Pattern.hpp  System.hpp  Theme.hpp  Threads.hpp  Types.hpp  Utils.hpp  Window.hpp  Xlib.hpp
src/fprd/X11/: Utils.hpp
src/fprd/draw/: ArcBar.hpp  Bar.hpp  Graph.hpp  History.hpp  Text.hpp
src/fprd/draw/animated/: AArcBar.hpp  ABar.hpp  AGraph.hpp  AnimatedList.hpp
src/fprd/element/: Bar.hpp  Graph.hpp
src/fprd/parts/: ArcBar.hpp  Bar.hpp  History.hpp  Text.hpp
src/fprd/probe/: CPU.hpp  NVML.hpp
src/fprd/probes/: CPU.hpp  NVML.hpp  UNIX.hpp  cpuinfo.hpp  is_utils.hpp
src/fprd/query/: CPU.hpp  Nvidia.hpp
src/fprd/util/: AnimatedValue.hpp  fdstreambuf.hpp  format.hpp  istream.hpp  ostream.hpp  ranges.hpp  time.hpp  to_string.hpp
src/fprd/widgets/: CPU.hpp  Nvidia.hpp
src/fprd/wrapper/: Cairo.hpp  Xlib.hpp
